# https://doc.rust-lang.org/cargo/reference/workspaces.html#the-members-and-exclude-fields
[workspace]
resolver = "2"
members = [
    "crates/*",
]
default-members = [
    "crates/*",
]

[workspace.lints.rust]
dead_code = "allow"
unused_imports = "allow"

[workspace.dependencies]
anyhow = { version = "1.0.75", features = [] }
env_logger = { version = "0.*, >=0.10", default-features = false, features = ["auto-color"] }
log = { version = "0.*, >=0.4", features = ["release_max_level_off"] }
tao-log = "1.0.1"

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[profile.bloat]
inherits = "dev"
opt-level = 3
lto = false
debug = 1

[profile.dev]
#panic = "abort"
#strip = true
opt-level = 3
lto = "thin"
debug = 1

[profile.release]
opt-level = 3
# https://github.com/rust-lang/cargo/issues/11275
# "panic_immediate_abort"
# rustflags = ["-Z", "build-std-features=panic_immediate_abort"]
panic = "abort"
#strip = true
#debug = 0
debug = true
lto = "fat"
incremental = false
codegen-units = 1
overflow-checks = true

[profile.stripped]
inherits = "release"
opt-level = 3
panic = "abort"
strip = true
debug = false
lto = "fat"
