[package]
name = "casc-cdn-client"
version.workspace = true
edition.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints]
workspace = true

[dependencies]
ahash = "0.8.8"
anyhow.workspace = true
bytes = "1.5.0"
derive_more = { version = "2.0.0", features = [ "display" ] }
hex = "0.4.3"
md-5 = { version = "0.10.6", features = [] }
miniz_oxide = "0.7.2"
# TODO: use http3 when available
reqwest = { version = "0.12.15", features = ["blocking", "rustls-tls-webpki-roots"] }
rust-ini = "0.21.0"
time = { version = "*", features = [ "macros", "local-offset", "formatting", "parsing" ] }
tinyvec = { version = "1.9.0", features = [ "alloc" ] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = [ "time", "env-filter" ] }

[package.metadata.cargo-machete]
ignored = ["rust-ini", "md-5"]
